[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["Firstname Lastname <firstname.lastname@domain.org>"]

[tool.poetry.dependencies]
python = ">=3.7"
ruamel.yaml = "0.15.88"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


